--- a/src/components/views/auth/SumraAuthPage.css
+++ b/src/components/views/auth/SumraAuthPage.css
@@ -12,24 +12,7 @@ button {
     max-width: 340px;
     margin: auto;
 }
-.authentification-form.login-form form,
-.authentification-form.user-signup-form form,
-.authentification-form.verification-code-form form {
-    margin-top: 60px;
-}
-.authentification-form.login-form .sumra-input-fieldset,
-.authentification-form.user-signup-form .sumra-input-fieldset,
-.authentification-form.verification-code-form .sumra-input-fieldset {
-    margin-top: 34px;
-}
-.authentification-form.login-form .sumra-Button,
-.authentification-form.user-signup-form .sumra-Button,
-.authentification-form.verification-code-form .sumra-Button {
-    margin-top: 30px;
-}
-.authentification-form.verification-code-form .sumra-react-code-input {
-    margin-top: 30px;
-}
+
 .sumra-social-links {
     display: flex;
     justify-content: space-between;
@@ -45,8 +28,12 @@ button {
     z-index: 1;
     position: relative;
     height: 64px;
-    background: #fff;
-    box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.1);
+    background: linear-gradient(
+            0deg,
+            rgba(249, 251, 255, 0.65),
+            rgba(249, 251, 255, 0.65)
+        ),
+        linear-gradient(180deg, #e8f1ff 0%, #ffffff 100%);
     display: flex;
     justify-content: center;
     align-content: center;
@@ -82,10 +69,14 @@ button {
     display: table;
 }
 .sumra-main {
-    min-height: calc(100vh - 64px - 153px);
-    background-color: red;
-    /*     background-image: url("../../../../res/images/sumra/pattern.svg");
- */
+    min-height: 100vh;
+
+    background: linear-gradient(
+            0deg,
+            rgba(249, 251, 255, 0.65),
+            rgba(249, 251, 255, 0.65)
+        ),
+        linear-gradient(180deg, #e8f1ff 0%, #ffffff 100%);
 }
 .sumra-main .h1-title,
 .sumra-main .h2-subtitle,
@@ -95,6 +86,7 @@ button {
     line-height: 100%;
     text-align: center;
     color: #202020;
+    margin: 0;
 }
 .sumra-main .h1-title {
     padding-top: 45px;
