--- a/src/components/views/auth/SumraAuthPage.css
+++ b/src/components/views/auth/SumraAuthPage.css
@@ -26,14 +26,11 @@ button {
 }
 .sumra-header {
     z-index: 1;
-    position: relative;
+
+    position: absolute;
+    top: 0;
     height: 64px;
-    background: linear-gradient(
-            0deg,
-            rgba(249, 251, 255, 0.65),
-            rgba(249, 251, 255, 0.65)
-        ),
-        linear-gradient(180deg, #e8f1ff 0%, #ffffff 100%);
+    background: rgba(249, 251, 255, 0);
     display: flex;
     justify-content: center;
     align-content: center;
@@ -41,6 +38,10 @@ button {
 }
 .sumra-header .logotype {
     position: relative;
+    display: block;
+    margin: auto;
+    margin-left: calc(100vw / 2 - 80px);
+    margin-bottom: 50px;
 }
 .sumra-header .logotype:before,
 .sumra-header .logotype:after {
@@ -86,7 +87,7 @@ button {
     line-height: 100%;
     text-align: center;
     color: #202020;
-    margin: 0;
+    margin-top: 50px;
 }
 .sumra-main .h1-title {
     padding-top: 45px;
