--- a/src/components/views/auth/SumraAuthPage.css
+++ b/src/components/views/auth/SumraAuthPage.css
@@ -120,12 +120,27 @@ button {
     background: #111;
 }
 .sumra-line {
-    width: 100%;
-    height: 45px;
-    background-image: url("../../../../res/images/sumra/Line.svg");
-    background-repeat: no-repeat;
-    background-position-y: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 7px 8px 9px;
+
+    position: static;
+    width: 31px;
+    height: 31px;
+    margin: 20px auto;
+
+    background: #f5f5f8;
+    border: 2px solid #ffffff;
+    box-sizing: border-box;
+    /* Block shadow */
+
+    box-shadow: 0px 5px 20px rgba(88, 86, 104, 0.12),
+        0px 30px 60px rgba(143, 140, 167, 0.08);
+    border-radius: 50px;
 }
+
 .sumra-phone-fieldset {
     display: flex;
     justify-content: space-between;
@@ -240,10 +255,9 @@ button {
 
 .sumra-button-section {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     padding: 0px;
-    background-color: #419681;
 
     position: static;
     width: 310px;
@@ -252,12 +266,6 @@ button {
     top: 120px;
 
     /* Inside Auto Layout */
-
-    flex: none;
-    order: 1;
-    align-self: stretch;
-    flex-grow: 0;
-    margin: 25px 0px;
 }
 .sumra-Button {
     display: flex;
@@ -266,7 +274,7 @@ button {
     align-items: center;
     padding: 0px;
 
-    position: absolute;
+    position: relative;
     left: 0px;
     right: 0px;
     top: 0px;
@@ -509,23 +517,4 @@ button {
     border-radius: 5px;
     width: 44px;
     height: 44px;
-}
-
-.sumra-auth-form.sumra-auth-button {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    padding: 0px;
-
-    position: absolute;
-    left: 0px;
-    right: 0px;
-    top: 0px;
-    bottom: 0px;
-
-    /* Linear */
-
-    background: linear-gradient(270deg, #eda416 0%, #e97819 100%);
-    border-radius: 7px;
 }
