--- a/src/components/views/auth/SumraAuthPage.css
+++ b/src/components/views/auth/SumraAuthPage.css
@@ -415,10 +415,13 @@ button {
     right: 500px;
     top: 0px;
     bottom: 0px;
+}
+.sumra-welcome-slide1 {
     background-image: url("../../../../res/images/sumra/slide-1-min.png");
-    background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-position: center;
+    width: 100%;
+    height: 200px;
 }
 
 .sumra-auth-form {
@@ -517,4 +520,54 @@ button {
     border-radius: 5px;
     width: 44px;
     height: 44px;
+}
+.swiper-container {
+    width: 100%;
+    height: 100%;
+}
+
+.swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+
+    /* Center slide text vertically */
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+}
+
+.swiper-slide .sumra-wallet-slide {
+    display: block;
+    width: 100%;
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.sutisfied-clients {
+    position: relative;
+    width: 464px;
+    height: 32px;
+    left: calc(50% - 464px / 2 + 23.5px);
+    top: 628px;
+
+    font-family: DM Sans;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 28px;
+    line-height: 36px;
+    text-transform: capitalize;
+    /* White / 100% */
+
+    color: #ffffff;
 }
