--- a/src/components/views/auth/SumraAuthPage.css
+++ b/src/components/views/auth/SumraAuthPage.css
@@ -397,6 +397,7 @@ button {
     align-items: center;
     height: 54px;
     margin-top: 25px;
+    margin-bottom: 25px;
     box-sizing: border-box;
 
     flex-direction: row;
@@ -866,4 +867,69 @@ button {
     /* Other Colors/Light text */
 
     color: #7a7b85;
+}
+.sumra-create-username-text {
+    position: static;
+    width: 265px;
+    height: 50px;
+    left: calc(50% - 265px / 2);
+    top: 61px;
+
+    font-family: "DM Sans";
+    font-style: normal;
+    font-weight: normal;
+    font-size: 15px;
+    line-height: 25px;
+    /* or 167% */
+
+    text-align: center;
+
+    /* Other Colors/Primary text */
+
+    color: #4c4e5a;
+
+    mix-blend-mode: normal;
+}
+
+.sumra-create-username-box {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    position: relative;
+    width: 430px;
+    height: 378px;
+    left: calc(50% - 430px / 2);
+    top: 0px;
+
+    background: #f9fbff;
+    /* Drop Shadow */
+
+    box-shadow: 0px 50px 70px rgba(35, 44, 91, 0.07);
+    border-radius: 12px;
+}
+
+.sumra-create-username-title {
+    position: static;
+    width: 310px;
+    height: 36px;
+    left: calc(50% - 310px / 2);
+    top: 0px;
+    margin-bottom: 25px;
+
+    font-family: "DM Sans";
+    font-style: normal;
+    font-weight: bold;
+    font-size: 26px;
+    line-height: 100%;
+    /* or 26px */
+
+    display: inline-block;
+    align-items: center;
+    text-align: center;
+
+    /* Other Colors/Primary dark */
+
+    color: #2e3140;
 }
